2006-07-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGrdb.py: Re-map name formats on import.
	* src/GrampsDb/_GrampsBSDDB.py (_load_metadata): Upgrade custom
	name formats.
	(find_backlink_handles): Work around readonly db problems;
	(_get_obj_from_gramps_id): Work around readonly db problems.
	* src/GrampsDb/_ReadXML.py (start_format): Attempt parsing the
	active state for the custom name format; re-map format numbers on
	import.
	* src/GrampsDb/_WriteXML.py (write_name_formats): Write 4-tuple
	custom name formats; Write formats in the beginning of data;
	(_xml_version): Output as version 1.1.1.
	* data/grampsxml.rng: Update XML description for 1.1.1.
	* data/grampsxml.dtd: Update XML description for 1.1.1.
	* src/ViewManager.py (post_load_newdb): Revert changes (done on
	the lower level).
	* src/NameDisplay.py (register_custom_formats): Revert changes (done on
	the lower level).

2006-07-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/ViewManager.py (post_load_newdb): Upgrade path for different
	grdb custom name format table versions
	* src/NameDisplay.py (register_custom_formats): Upgrade path for
	different grdb custom name format table versions

2006-07-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsCfg.py: Custom name format support improvements.
	* src/Editors/_EditName.py: Custom name format support improvements.
	* src/NameDisplay.py: Custom name format support improvements.
	* src/plugins/Check.py (cleanup_deleted_name_formats): Db cleanup of
	deleted custom name format references.

2006-07-26  Steve Hall  <digitect@mindspring.org>
	* windows/nsis/gramps-build.bat: Add windows building scripts.
	* windows/nsis/gramps.nsi: Add windows building scripts.
	* windows/nsis/gcheck.py: Add windows building scripts.
	* windows/nsis/ped24.ico: Add windows icon.

2006-07-26  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Remove debian/Makefile from the list.